--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,4 @@
 @import './components/routes-maker';
 @import './components/hero-canvas';
 @import './components/home';
+@import './components/spanified';
