add: fade-text hero banner effect

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,5 @@
 @import './components/hero-canvas';
 @import './components/home';
 @import './components/spanified';
+@import './components/enter-cms';
+@import './components/fade-text';
