--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,12 +1,14 @@
 .home {
   min-height: 90vh;
   padding: 0;
+  overflow: hidden;
 }
 
 .home__title {
   font-size: 10vw;
   text-align: center;
   position: absolute;
+  z-index: 1;
   top: 0;
   bottom: 0;
   left: 0;
