--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,3 +17,4 @@
 @import './components/spanified';
 @import './components/enter-cms';
 @import './components/fade-text';
+@import './components/cms';
