enhance: cms name shadow

--- a/src/scss/components/_cms.scss
+++ b/src/scss/components/_cms.scss
@@ -35,6 +35,8 @@
   font-family: sans-serif;
   font-weight: bold;
   padding: 10px 0;
+  letter-spacing: 0.1vw;
+  text-shadow: 0 0 30px #000;
 }
 
 .cms-input {
