--- a/src/scss/components/_main-nav.scss
+++ b/src/scss/components/_main-nav.scss
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 15px 10vw;
   position: sticky;
-  top: 0;
+  top: -57px;
   background: $main-bg-color;
   z-index: 2;
   box-shadow: 0 0 100px -25px;
