add: scrollbar style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,3 +18,4 @@
 @import './components/enter-cms';
 @import './components/fade-text';
 @import './components/cms';
+@import './components/scrollbar';
