--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -1,6 +1,7 @@
 .container {
   background-color: $main-bg-color;
-  box-shadow: inset 0 -20vw 20vw #000;
+  // box-shadow: inset 0 -20vw 20vw #000;
+  // this box shadow was affecting performance
   background-image: url('https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=1650&w=1940');
   background-size: cover;
   background-position: center;
