enhance title generation

--- a/src/components/strings/GlobalWrapper/custom.scss
+++ b/src/components/strings/GlobalWrapper/custom.scss
@@ -14,7 +14,7 @@
     &--grid[class] {
         display: grid;
         grid-gap: 10rem;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     }
 
     &--opacity-hover[class] {
