--- a/src/components/strings/ContainerDecorator/styles.scss
+++ b/src/components/strings/ContainerDecorator/styles.scss
@@ -25,5 +25,7 @@
         background: white;
         color: black;
         border-radius: .5rem;
+        display: inline-block;
+        margin: 1rem 0;
     }
 }
