--- a/src/components/quarks/ReadModeToggler/styles.scss
+++ b/src/components/quarks/ReadModeToggler/styles.scss
@@ -8,6 +8,7 @@
     border-radius: 0 0 0 .5rem;
     border-width: 0 0 3px 3px;
     z-index: 1;
+    cursor: pointer;
 
     path {
         fill: white;
