--- a/src/components/strings/GlobalWrapper/custom.scss
+++ b/src/components/strings/GlobalWrapper/custom.scss
@@ -33,7 +33,9 @@
     }
 
     &--opacity-hover[class] {
-        opacity: 0.5;
+        @media (min-width: 640px) {
+            opacity: .5;
+        }
 
         &:hover {
             opacity: 1;
@@ -74,9 +76,12 @@
         padding: 1rem 0;
         color: white;
         outline: none;
-        opacity: .75;
         width: clamp(5rem, 50vw, 30rem);
         display: block;
+
+        @media (min-width: 640px) {
+            opacity: .75;
+        }
 
         &:focus {
             opacity: 1;
