fix search for ios

--- a/src/components/strings/GlobalWrapper/custom.scss
+++ b/src/components/strings/GlobalWrapper/custom.scss
@@ -70,6 +70,7 @@
     }
 
     &--search {
+        border-radius: 0;
         background: transparent;
         border: solid white;
         border-width: 0 0 3px 0;
