--- a/src/components/strings/GlobalWrapper/global.scss
+++ b/src/components/strings/GlobalWrapper/global.scss
@@ -25,6 +25,10 @@ canvas {
     display: block;
 }
 
+h1 {
+    font-size: clamp(2.5rem,5vw,4rem);
+}
+
 h1, h2, h3, h4, h5 {
     font-family: var(--title-font);
 }
